--- a/Assets/StreamingAssets/distances_2d_mapping.json
+++ b/Assets/StreamingAssets/distances_2d_mapping.json
@@ -1,28 +1,34 @@
 {
-  "emotions": {
-    "happy": [
-      1,
-      1
-    ],
-    "sad": [
-      -1,
-      -1
-    ],
-    "neutral": [
-      0,
-      0
-    ],
-    "scared": [
-      -0.5,
-      0.5
-    ],
-    "surprised": [
-      0,
-      0.75
-    ],
-    "angry": [
-      -1,
-      1
-    ]
-  }
+  "emotions": [
+    {
+      "type": "happy",
+      "x": 1,
+      "y": 1
+    },
+    {
+      "type": "sad",
+      "x": -1,
+      "y": -1
+    },
+    {
+      "type": "neutral",
+      "x": 0.0,
+      "y": 0.0
+    },
+    {
+      "type": "scared",
+      "x": -0.5,
+      "y": 0.5
+    },
+    {
+      "type": "surprised",
+      "x": 0.0,
+      "y": 0.75
+    },
+    {
+      "type": "angry",
+      "x": -1,
+      "y": 1
+    }
+  ]
 }
