--- a/Assets/StreamingAssets/distances_2d_mapping.json
+++ b/Assets/StreamingAssets/distances_2d_mapping.json
@@ -3,32 +3,86 @@
     {
       "type": "happy",
       "x": 0.707,
-      "y": 0.707
+      "y": 0.707,
+      "_comment": "< thresholds[0]: -3, < thresholds[1]: -2, < thresholds[2]: -1, < thresholds[3]: 0, < thresholds[4]: 1, < thresholds[5]: 2, > thresholds[5]: 3",
+      "thresholds": [
+        0.2,
+        0.35,
+        0.45,
+        0.55,
+        0.65,
+        0.75
+      ]
     },
     {
       "type": "sad",
       "x": -0.707,
-      "y": -0.707
+      "y": -0.707,
+      "_comment": "< thresholds[0]: -3, < thresholds[1]: -2, < thresholds[2]: -1, < thresholds[3]: 0, < thresholds[4]: 1, < thresholds[5]: 2, > thresholds[5]: 3",
+      "thresholds": [
+        0.2,
+        0.35,
+        0.45,
+        0.55,
+        0.65,
+        0.75
+      ]
     },
     {
       "type": "neutral",
       "x": 0,
-      "y": 0
+      "y": 0,
+      "_comment": "< thresholds[0]: -3, < thresholds[1]: -2, < thresholds[2]: -1, < thresholds[3]: 0, < thresholds[4]: 1, < thresholds[5]: 2, > thresholds[5]: 3",
+      "thresholds": [
+        0.2,
+        0.35,
+        0.45,
+        0.55,
+        0.65,
+        0.75
+      ]
     },
     {
       "type": "scared",
       "x": -0.354,
-      "y": 0.354
+      "y": 0.354,
+      "_comment": "< thresholds[0]: -3, < thresholds[1]: -2, < thresholds[2]: -1, < thresholds[3]: 0, < thresholds[4]: 1, < thresholds[5]: 2, > thresholds[5]: 3",
+      "thresholds": [
+        0.1,
+        0.175,
+        0.225,
+        0.28,
+        0.33,
+        0.38
+      ]
     },
     {
       "type": "surprised",
       "x": 0,
-      "y": 0.75
+      "y": 0.75,
+      "_comment": "< thresholds[0]: -3, < thresholds[1]: -2, < thresholds[2]: -1, < thresholds[3]: 0, < thresholds[4]: 1, < thresholds[5]: 2, > thresholds[5]: 3",
+      "thresholds": [
+        0.15,
+        0.27,
+        0.34,
+        0.42,
+        0.49,
+        0.57
+      ]
     },
     {
       "type": "angry",
       "x": -0.707,
-      "y": 0.707
+      "y": 0.707,
+      "_comment": "< thresholds[0]: -3, < thresholds[1]: -2, < thresholds[2]: -1, < thresholds[3]: 0, < thresholds[4]: 1, < thresholds[5]: 2, > thresholds[5]: 3",
+      "thresholds": [
+        0.2,
+        0.35,
+        0.45,
+        0.55,
+        0.65,
+        0.75
+      ]
     }
   ]
 }
