--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,5 @@ sysinfo.txt
 # Unused imported assets
 /Assets/Unused
 /Assets/Unused.meta
-Assets/European Buildings.meta
+/Assets/European Buildings.meta
+/Assets/HorrorHospitalPackFJM.unitypackage.meta
